<resources>
    <string name="app_name">Corona Virus Tracker</string>
    <string name="title_home">Beranda</string>
    <string name="title_information">Informasi</string>
    <string name="title_support">Bantuan</string>
    <string name="title_banner">Selalu Jaga Kesehatan</string>
    <string name="sub_title_banner">Lihat keadaan disekitar kamu, jangan batuk atau bersin sembarangan. Apabila sakit jangan lupa pakai masker.</string>
    <string name="content_description">content_description</string>
    <string name="updated">Update Terkini</string>
    <string name="positive">Positif</string>
    <string name="recovered">Sembuh</string>
    <string name="death">Meninggal</string>
    <string name="_count">0</string>
    <string name="treated">Dirawat</string>
    <string name="_date">null</string>
    <string name="contact_us">Hubungi Kami</string>
    <string name="_add_count">+0</string>
    <string name="consultation">Konsultasi\n</string>
    <string name="contact">Kontak\nLayanan</string>
    <string name="hospital">Rumah Sakit Rujukan</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="phone">Nomor Telepon</string>
</resources>