<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.coronavirustracker.ui.fragment.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_hospitalFragment"
            app:destination="@id/hospitalFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_information"
        android:name="com.example.coronavirustracker.ui.fragment.InformationFragment"
        android:label="@string/title_information"
        tools:layout="@layout/fragment_information" />

    <fragment
        android:id="@+id/navigation_support"
        android:name="com.example.coronavirustracker.ui.fragment.SupportFragment"
        android:label="@string/title_support"
        tools:layout="@layout/fragment_support" />
    <fragment
        android:id="@+id/hospitalFragment"
        android:name="com.example.coronavirustracker.ui.fragment.HospitalFragment"
        android:label="fragment_hospital"
        tools:layout="@layout/fragment_hospital" />
</navigation>