<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="12dp"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:layout_marginTop="4dp"
    android:layout_marginBottom="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <TextView
            android:id="@+id/textProvince"
            style="@style/TextView.PoppinsMedium16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Jawa Tengah" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardPositive"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:cardElevation="0dp"
            app:layout_constraintEnd_toStartOf="@+id/cardRecovered"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textProvince">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/labelPositive"
                    style="@style/TextView.PoppinsRegular14sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/positive"
                    android:textColor="#563AC8"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textPositive"
                    style="@style/TextView.PoppinsMedium16sp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/_count"
                    android:textColor="#563AC8"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/labelPositive" />

                <TextView
                    android:id="@+id/textAddPositive"
                    style="@style/TextView.PoppinsRegular12sp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/_add_count"
                    android:textColor="@android:color/darker_gray"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textPositive"
                    tools:ignore="TextContrastCheck" />

                <ImageView
                    android:id="@+id/ivPositive"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:contentDescription="@string/content_description"
                    android:scaleType="fitEnd"
                    android:src="@drawable/image_positive"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="ImageContrastCheck" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardRecovered"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:cardElevation="0dp"
            app:layout_constraintEnd_toStartOf="@+id/cardDeath"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/cardPositive"
            app:layout_constraintTop_toTopOf="@+id/cardPositive">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/labelRecovered"
                    style="@style/TextView.PoppinsRegular14sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/recovered"
                    android:textColor="#28C285"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="TextContrastCheck" />

                <TextView
                    android:id="@+id/textRecovered"
                    style="@style/TextView.PoppinsMedium16sp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/_count"
                    android:textColor="#28C285"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/labelRecovered"
                    tools:ignore="TextContrastCheck" />

                <TextView
                    android:id="@+id/textAddRecovered"
                    style="@style/TextView.PoppinsRegular12sp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/_add_count"
                    android:textColor="@android:color/darker_gray"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textRecovered"
                    tools:ignore="TextContrastCheck" />

                <ImageView
                    android:id="@+id/ivRecovered"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:contentDescription="@string/content_description"
                    android:scaleType="fitEnd"
                    android:src="@drawable/image_recovered"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/textRecovered"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="ImageContrastCheck" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardDeath"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            app:cardElevation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/cardRecovered"
            app:layout_constraintTop_toTopOf="@+id/cardRecovered">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/labelDeath"
                    style="@style/TextView.PoppinsRegular14sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/death"
                    android:textColor="#E74782"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="TextContrastCheck" />

                <TextView
                    android:id="@+id/textDeath"
                    style="@style/TextView.PoppinsMedium16sp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/_count"
                    android:textColor="#E74782"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/labelDeath"
                    tools:ignore="TextContrastCheck" />

                <TextView
                    android:id="@+id/textAddDeath"
                    style="@style/TextView.PoppinsRegular12sp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/_add_count"
                    android:textColor="@android:color/darker_gray"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textDeath"
                    tools:ignore="TextContrastCheck" />

                <ImageView
                    android:id="@+id/ivDeath"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:scaleType="fitEnd"
                    android:src="@drawable/image_death"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:contentDescription="@string/content_description" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>